test_suite/tests/ui/inject_constructor/missing_param.stderr
error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> tests/ui/inject_constructor/missing_param.rs:3:10
   |
3  | #[derive(Inject)]
   |          ^^^^^^
   |          |
   |          supplied 2 arguments
   |          expected 3 arguments
   |
note: associated function defined here
  --> tests/ui/inject_constructor/missing_param.rs:11:12
   |
11 |     pub fn new(a: String, b: Singleton<usize>, trim_string: bool) -> Self {
   |            ^^^ ---------  -------------------  -----------------
   = note: this error originates in the derive macro `Inject` (in Nightly builds, run with -Z macro-backtrace for more info)
